--- a/services/instant-fence-quote.html
+++ b/services/instant-fence-quote.html
@@ -75,8 +75,7 @@ transition: background 0.2s;
 <a href="#maincontent" style="position:absolute;left:-999px;top:auto;background:#27ae60;color:#fff;padding:8px;z-index:100;">Skip to main content</a>
 
 <header>
-<!-- Use a high-res SVG or PNG logo here -->
-<img src="/images/logo-highres.png" alt="Home Repairs 4U logo" class="logo" width="1200" height="400" loading="lazy">
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="lazy">
 <div style="text-align:center; margin-top:10px;">
 <a href="https://steely1968.github.io/" style="font-size:20px; font-weight:600;">Home</a>
 </div>
@@ -207,33 +206,36 @@ resultEl.setAttribute('aria-live','polite');
 document.getElementById('downloadPDF').style.display = 'inline-block';
 }
 
-// PDF generation with high-res logo
+// PDF generation with working logo
 document.getElementById('downloadPDF').addEventListener('click', async ()=>{
 const { jsPDF } = window.jspdf;
 const doc = new jsPDF();
 const img = new Image();
-img.src='/images/logo-highres.png'; // high-res PNG or SVG
+img.src='/images/logo.webp'; // use your current working logo
 await img.decode();
-doc.addImage(img, 'PNG', 14, 10, 180, 60);
+doc.addImage(img, 'WEBP', 14, 10, 120, 40);
+
 doc.setFillColor(39,174,96);
-doc.rect(0, 75, 210, 15, 'F');
+doc.rect(0, 55, 210, 15, 'F');
 doc.setTextColor(255,255,255);
 doc.setFontSize(16);
-doc.text("Instant Fence Quote", 14, 85);
+doc.text("Instant Fence Quote", 14, 65);
 
 const tableEl = document.querySelector('#fenceResult table');
+if(tableEl){
 const rows = [];
 for(let i=1;i<tableEl.rows.length;i++){
 rows.push([tableEl.rows[i].cells[0].innerText, tableEl.rows[i].cells[1].innerText]);
 }
 
 doc.autoTable({
-startY:95,
+startY:75,
 head:[['Item','Cost']],
 body:rows,
 theme:'grid',
 headStyles:{fillColor:[39,174,96], textColor:255},
 });
+}
 
 const pageHeight = doc.internal.pageSize.height;
 doc.setFontSize(10);
@@ -243,7 +245,7 @@ doc.text("Home Repairs 4U | Askern DN6 | Call 07735 873694 | https://steely1968.
 doc.save("Fence-Quote.pdf");
 });
 
-// FAQ accordion keyboard support
+// FAQ accordion
 document.querySelectorAll('.faq-item button').forEach(btn=>{
 btn.addEventListener('click', ()=>{
 const expanded=btn.getAttribute('aria-expanded')==='true';
